<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mindolph</groupId>
    <artifactId>mindolph</artifactId>
    <packaging>pom</packaging>
    <version>1.1</version>
    <modules>
        <module>mindolph-fx</module>
        <module>mindolph-core</module>
        <module>mindolph-mindmap</module>
        <module>mindolph-base</module>
        <module>mindolph-plantuml</module>
        <module>mindolph-desktop</module>
        <module>mindmap-panel</module>
        <module>mindmap-model</module>
        <module>mindolph-markdown</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <javafx.version>17.0.6</javafx.version>
        <commons.lang.version>3.12.0</commons.lang.version>
        <commons.io.version>2.11.0</commons.io.version>
        <swstate.version>1.1</swstate.version>
        <plantuml.version>1.2023.1</plantuml.version>
        <swiftboot.version>2.3</swiftboot.version>
        <slf4j.version>1.7.36</slf4j.version>
        <log4j2.version>2.19.0</log4j2.version>
        <junit.version>5.9.0</junit.version>
        <mfx.version>1.0</mfx.version>
        <gson.version>2.10.1</gson.version>
        <controlsfx.version>11.1.2</controlsfx.version>
        <richtextfx.version>0.11.0</richtextfx.version>
        <reactfx.version>2.0-M5</reactfx.version>
        <jsoup.version>1.15.3</jsoup.version>
        <json.version>20220924</json.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.swiftech</groupId>
                <artifactId>swstate</artifactId>
                <version>${swstate.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.swiftech</groupId>
                <artifactId>swiftboot-utils</artifactId>
                <version>${swiftboot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.swiftech</groupId>
                <artifactId>swiftboot-collections</artifactId>
                <version>${swiftboot.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sourceforge.plantuml</groupId>
                <artifactId>plantuml</artifactId>
                <version>${plantuml.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
                <classifier>${platform}</classifier>
            </dependency>
            <dependency>
                <groupId>com.mindolph</groupId>
                <artifactId>mfx</artifactId>
                <version>${mfx.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons.lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.4</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.15</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.6</version>
            </dependency>
            <dependency>
                <groupId>org.fxmisc.richtext</groupId>
                <artifactId>richtextfx</artifactId>
                <version>${richtextfx.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-base</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-fxml</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-graphics</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-controls</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
            <dependency>
                <groupId>org.controlsfx</groupId>
                <artifactId>controlsfx</artifactId>
                <version>${controlsfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.reactfx</groupId>
                <artifactId>reactfx</artifactId>
                <version>${reactfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <profiles>
        <profile>
            <id>unix-active</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <platform>linux</platform>
            </properties>
        </profile>
        <profile>
            <id>mac-active</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <platform>mac</platform>
            </properties>
        </profile>
        <profile>
            <id>windows-active</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <platform>win</platform>
            </properties>
        </profile>
    </profiles>
</project>